# coolgame

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: AddIconToBinary.cmake
src/: Button.cpp  aabb.cpp  array_list.cpp  body.cpp  button.cpp  element.cpp  io.cpp  main.cpp  menu.cpp  physics.cpp  player.cpp  ray.cpp  timer.cpp  util.cpp  vector.cpp  vector2.cpp
src/assets/: cozette.hpp  mago.h
src/assets/cool.icon/: icon.json
src/include/: Button.cpp  Button.hpp  aabb.hpp  anchor.hpp  array_list.hpp  body.hpp  button.hpp  constants.hpp  element.hpp  globals.hpp  io.hpp  main.hpp  menu.hpp  physics.hpp  player.hpp  ray.hpp  timer.hpp  types.hpp  util.hpp  vector.hpp  vector2.hpp
src/include/engine/: aabb.cpp  aabb.hpp  body.cpp  body.hpp  game_state.hpp  physics.cpp  physics.hpp  player.hpp
src/include/engine/level/: creator.cpp  creator.hpp
src/include/engine/physics/: aabb.cpp  aabb.hpp  body.cpp  body.hpp  physics.cpp  physics.hpp  player.hpp
src/include/engine/ui/: anchor.hpp  button.cpp  button.hpp  element.cpp  element.hpp  menu.cpp  menu.hpp
src/include/util/: timer.hpp  types.hpp  util.hpp  vector2.hpp
src/lib/: constants.hpp  util.cpp
